2013.06.29/README.md
# CoderDojo Ponce Springs 6/29/2013 Event Outline and Resources

# Parking

See [PARKING.md](PARKING.md) for info on where to park!

# What to bring

* Parents: bring a laptop for your child. We don't have any loaner laptops this time.
* We'll have soft drinks and water and a some snacks, but if you'd like to bring some other snacks to share, 
that would be great.

# When you arrive

We'll have five separate sessions, broken down for different student skill levels. Figure out where you most 
closely fit in one of these levels:

* **Beginner level**: You are totally new or have little exposure to programming and / or web development

* **Intermediate level**: You have some experience with coding, but want to dig into concepts like game development, object-oriented programming, events, and web programming

* **Advanced level**: You've already been writing code for a while and may already have projects you're working on and goals for what you want to achieve next

## Sessions

Each session will begin around 2:15, so you'll need to select one by then:

* For **beginner level** students:
  * **Workshop A:** Build your own web site
  
  `or`

  * **Workshop B:** Code animations and geometry with Python
* For **intermediate level** students:
  * **Workshop C:** Build the classic arcade game Pong in HTML, CSS, and JavaScript
  
  `or`

  * **Workshop D:** Make battling JavaScript robots!
* For **advanced level** students:
  * **Open space and pair programming lab:** show us what you've coded and tell us where you want to go!

**Note:** *we'll likely offer these same or similar sessions on an ongoing basis at future events so 
don't feel like you're missing out on anything. You can always try the others later or even do the 
materials on your own or with friends!*


**Keep reading for all details.**

# Full details

**Note:** Only the beginner's `Python Turtle` session requires any special software to download ahead of time.

# Beginner level workshops

For students of any age that are totally new or have little exposure to programming and / or web development.

## Workshop A: Build your own web site

### Software to install on your laptop before you attend

No special installation required. We will use https://thimble.webmaker.org/, a free online HTML editor that 
lets you save and publish pages instantly to share with friends.

### What you’ll learn

Learn how to use Hypertext Markup Language (HTML), Cascading Style Sheets (CSS), JavaScript, and graphics to build your own web sites.

### Starting URL

http://goo.gl/wNf8i

**New version!**: http://embed.plnkr.co/WI16H7Rsa5adejXSmyNj/preview (This is where I'm improving the tool)

### Resources for going further after this tutorial

Creating your own web page with Thimble is really just the beginning of what you can do on the web! Try these out:

* Mozilla’s Popcorn Maker: mash up YouTube videos, SoundCloud, or HTMl5 content into fun videos and collages: https://popcorn.webmaker.org/editor/ 
* Code Avengers 3-Level HTML adventure learning: http://www.codeavengers.com/ (You can also learn JavaScript for apps and games!)
* HTMl5 Rocks web site with lots of tutorials: http://www.html5rocks.com/en/tutorials 

## Workshop B: Code animations and geometry with Python

### Software to install on your laptop before you attend

For this workshop you will need Python installed on your computer.  We will be using the latest version of Python, which is 3.3.2.  However, if you already happened to have an older version of Python installed on your computer, it will work just fine.

* **Windows**
  * Download and install Python for Windows at http://www.python.org/ftp/python/2.7.5/python-2.7.5.msi
* **Mac**
  * If you have a Mac, it already has Python pre-installed.  Just download and install the IDLE development environment from here: http://www.python.org/getit/mac/tcltk/.  You will need to choose the "Recommended" download for your OSX version.

### What you’ll learn

Use the popular and fun Python programming language to animate a turtle and learn key programming and Python concepts like for loops, ranges, and defining functions to create reusable code libraries to share with friends.

### Resources for going further after this tutorial

Now that you know the basics, you’re ready to become an expert. Here are some resources for going deeper:

* Learn Python online through an interactive step-by-step tutorial (without any download) at http://www.learnpython.org/
* Feeling like a challenge? Try http://learnpythonthehardway.org/! Just kidding, it's actually quite an easy way to learn Python, a really good way to start if you're new to programming.
* Tons of more learning resources for Python here: http://wiki.python.org/moin/BeginnersGuide/Programmers
* The documentation for the `turtle` module that we will be using can be found here: http://docs.python.org/3/library/turtle.html

# Intermediate level workshops

For students who have some experience with coding, but want to dig into concepts like game development, object-oriented programming, events, and web programming.

## Workshop C: Build the classic arcade game Pong in HTML, CSS, and JavaScript

### Software to install on your laptop before you attend

No installation required. We’ll be using the free http://www.codepen.io, which allows you to author code and save it for sharing with others.

### What you’ll learn

Learn how to use HTML, CSS, and JavaScript to create the classic arcade game Pong. You’ll learn about animation, using object-orientation in JavaScript, and gaming concepts like collision detection.

### Starting URL:

http://goo.gl/kjX3Z

### Resources for going further after this tutorial

Pong is an arcade classic, no doubt. But, maybe you want to recreate some of the other classic games? Or, do you want to learn more about animation, 3D, etc? Try some of these:

* HTML5 Game Development course at Udacity taught by a Google Chrome engineer: https://www.udacity.com/course/cs255 
* Lots of resources for building HTML5 games: http://www.html5gamedevelopment.com/html5-engines 
* Great collection of HTML5 games tutorials and tools: http://html5games.com/resources/ 

## Workshop D: Make battling JavaScript robots!

### Software to install on your laptop before you attend

No installation required. We’ll be using the free site http://fightcodegame.com/. This site requires that you have
an account with [http://www.github.com](http://www.github.com) first. GitHub requires that you be at least 
13-years-old, so if you're younger, make sure your parents approve or create the account for you.

You can study the documentation here: http://fightcodegame.com/docs/.

### What you’ll learn

Create virtual robots that battle each other head to head and rack up points while learning more about 
programming JavaScript with functions, object-orientation and inheritance, events, and more.
  
### Resources for going further after this tutorial

Fighting robots are popular in other languages too, but so are real, physical robots. Here are some resources:

* Robocode: develop robot battle tanks to fight each other: http://robocode.sourceforge.net/ (This is what FightCodeGame.com is based on)
* Lego Mindstorms: write code to make *real* robots move and do all kinds of things: http://mindstorms.lego.com/en-us/default.aspx
* Arduino is an open-source electronics platform intended for artists, designers, hobbyists, and anyone interested in creating interactive objects and environments: http://www.arduino.cc/ 

# Advanced level open space and pair programming lab

For students who have been writing code for a while and may already have projects they are working on and goals for 
problems they are trying to solve or what they want to learn next.

## How it will work

In the world of technology an "open space" is a place where people show up, start talking, and then decide what 
to do. There is no "master plan" that's fixed ahead of time. Instead, you help set the agenda!

You'll get to seek advice from your peers and mentors on coding challenges that you'd like to tackle in this 
and future sessions. We need you to help us and each other to set the agenda for what you want to pursue and 
become experts in!

And, "pair programming" simply means that two developers team up to work on some code together. They take 
turns writing code and thinking strategically about what to do next.

## What you'll teach us

Just to reiterate that we need you to show us what you've been coding already and talk about your next goals.
That way, we can learn about the technologies you're already using, if we need to, and then help you out! 
Perhaps we can help you solve an issue or just start coding something new and advanced just for fun. It all depends 
on your interests and your goals.

## Resources for going further

The number of web sites and training materials are almost endless for advanced programming. See what you can find
on these:

* GitHub is a home for your code, and a place to help other people code: [http://www.github.com](http://www.github.com)
* Google Developers site has tons of info and downloads for writing code with Google's many tools and APIs:
[https://developers.google.com/](https://developers.google.com/)
* Channel9 is Microsoft's social site for developers with lots of resources, videos, competitions: 
[http://channel9.msdn.com/](http://channel9.msdn.com/)
* Khan Academy Computer Science site with lots of videos and instructional materials, tutorials: [https://www.khanacademy.org/cs]
(https://www.khanacademy.org/cs)

What resources do you know of? Share them with us and the rest of the dojo!
