2013.07.13/README.md
# CoderDojo Ponce Springs 7/13/2013 Event Outline and Resources

**NOTE:** Just cloned this from 6/29. It will be updated before Saturday

# Parking

See [PARKING.md](PARKING.md) for info on where to park!

# Students, We Welcome Your Questions and Ideas!

The dojo is partly a classroom, but mostly a **playground**. You get to decide what programming languages, tools, and ideas you
want to play with. And, all of us: mentors, students, and parents help each other learn and have fun.

* Are you interested in learning something that we don't yet have a workshop about?
* Or, have you been building something on your own or with friends that you'd like some help with?
* Or, are you mostly interested in subjects that you're not sure how coding might fit in with?

We're here to help you learn what is interesting to you. You can always ask a mentor about things that interest you,
or about questions you have.

We even have a special **Any Question Any Time** area where you can come to ask questions that might be 
totally different from what is happening in the workshop areas. Or you can come there with your laptop and just work on whatever you 
want to and get help from mentors or other students.

# What to bring

* Parents: bring a laptop for your child. We don't have any loaner laptops this time.
* We'll have soft drinks and water and a some snacks, but if you'd like to bring some other snacks to share, 
that would be great.

# When you arrive

Students: we'll have have multiple work areas, some set up as workshops broken down for different student skill levels, and
another one called **Any Question Any Time** for you to talk with mentors about anything you want.

## What's your current experience with coding?

If you want to start with one of the workshops, see where you fit against these descriptions:

* **Beginner level**: You are totally new or have little exposure to programming and / or web development

* **Intermediate level**: You have some experience with coding, but want to dig into concepts like game development, 
object-oriented programming, events, and web programming

* **Advanced level**: You have already been programming for a while and have your own project that you'd like to 
discuss with other students or mentors that can help you go further

## Workshop Sessions

Each session will begin around 2:15, so pick one of these by then. You don't have to stick with the same 
session the whole time, and we'll be repeating them at least for a few more sessions.

* For **beginner level** students:

  * **Workshop A:** Learn HTML and CSS basics
  
  `or`
  
  * **Workshop B:** Build your own web site
  
  `or`

  * **Workshop C:** Build a simple game with Python

* For **intermediate level** students:

  * **Workshop D:** Build the classic arcade game Pong in HTML, CSS, and JavaScript
  
  `or`

  * **Workshop E:** Make battling JavaScript robots!

## Any Question Any Time area

* For students with other questions, or who are at an **advanced level**
  * Drop by the **Any Question Any Time** area to ask questions related to your own projects or ask how 
you can get started on something that interests you, but is different from the other workshops.

**Note:** *we'll likely offer these same or similar sessions on an ongoing basis at future events so 
don't feel like you're missing out on anything. You can always try the others later or even do the 
materials on your own or with friends!*

**Keep reading for all details.**

# Full details

**Note:** The beginner's `Python Game` session requires special software to download ahead of time. And, if you want 
to start creating a web page on your laptop that you can save for later, we recommend you download 
[Sublime Text 2](http://www.sublimetext.com/2).

# Beginner level workshops

For students of any age that are totally new or have little exposure to programming and / or web development.

## Workshop A: Learn HTML and CSS basics 

### Software to install on your laptop before you attend

No special installation required. We will use an online HTML Chat tool that lets you experiment with HTML easily
and share code with your friends.

### What you’ll learn

Learn the basics of what Hypertext Markup Language (HTML) tags are and how you use them to create web pages. 
You'll also learn how to change text colors, sizes, and add borders using Cascading Style Sheets (CSS). 
You'll learn how to create moving text, and flashing text also. And, you can share your favorite examples with 
your friends.

### Starting URL

http://goo.gl/wNf8i

**New version!**: http://embed.plnkr.co/WI16H7Rsa5adejXSmyNj/preview (This is where I'm improving the tool)

### Resources for going further after this tutorial

There are lots more HTML tags that can be used for creating all kinds of cool pages. Here are some places to learn more:

* W3 Schools provides a good reference of HTML tags: http://www.w3schools.com
* Code Avengers 3-Level HTML adventure learning: http://www.codeavengers.com/ (You can also learn JavaScript for apps and games!)

## Workshop B: Build your own web site

For students of any age that have done Workshop A, and would like to create a page that they can save on their
laptop or publish online for friends and family to see.

### Software to install on your laptop before you attend

We recommend you download and install the free [Sublime Text 2](http://www.sublimetext.com/2) editor.

### What you’ll learn

Learn how to take what you learned in Workshop A, (HTML and CSS), to build your own web page that you can save
on your laptop and/or publish online. You'll also learn how to create HTML tables, lists. If you get through
those topics, you'll then start to build some HTML forms that viewers of your web site can use to 
give you feedback on your site.

### Starting URL

TODO

### Resources for going further after this tutorial

Creating your own web page is really just the beginning of what you can do on the web! Try these out:

* Mozilla’s Popcorn Maker: mash up YouTube videos, SoundCloud, or HTMl5 content into fun videos and collages: https://popcorn.webmaker.org/editor/ 
* Code Avengers 3-Level HTML adventure learning: http://www.codeavengers.com/ (You can also learn JavaScript for apps and games!)
* HTMl5 Rocks web site with lots of tutorials: http://www.html5rocks.com/en/tutorials 

## Workshop C: Build a simple game with Python.

You can find the complete instructions and lesson plan [here](pygame/README.md).

### Software to install on your laptop before you attend

For this workshop you will need Python installed on your computer.  We will be using the latest version of Python, which is 3.3.2.  However, if you already happened to have an older version of Python installed on your computer, it will work just fine.

* **Windows**
  * Download and install Python for Windows at http://www.python.org/ftp/python/2.7.5/python-2.7.5.msi
  * Download and install PyScripter at https://code.google.com/p/pyscripter/downloads/detail?name=PyScripter-v2.5.3-Setup.exe
  * Download and install the `pygame` library at http://pygame.org/ftp/pygame-1.9.1.win32-py2.7.msi

* **Mac**
  * If you have a Mac, it already has Python pre-installed.
  * Download and install the `pygame` library for your version of Mac OSX here: http://www.pygame.org/download.shtml

### What you’ll learn

Use the popular and fun Python programming language to create a simple game.

### Resources for going further after this tutorial

Now that you know the basics, you’re ready to become an expert. Here are some resources for going deeper:

* Learn Python online through an interactive step-by-step tutorial (without any download) at http://www.learnpython.org/
* Feeling like a challenge? Try http://learnpythonthehardway.org/! Just kidding, it's actually quite an easy way to learn Python, a really good way to start if you're new to programming.
* Tons of more learning resources for Python here: http://wiki.python.org/moin/BeginnersGuide/Programmers
* The docummentatition and tutorials for the `pygame` library can be found here: http://www.pygame.org/docs/, there are also tons of pygame games available for download.

# Intermediate level workshops

For students who have some experience with coding, but want to dig into concepts like game development, object-oriented programming, events, and web programming.

## Workshop D: Build the classic arcade game Pong in HTML, CSS, and JavaScript

### Software to install on your laptop before you attend

No installation required. We’ll be using the free http://www.codepen.io, which allows you to author code and save it for sharing with others.

### What you’ll learn

Learn how to use HTML, CSS, and JavaScript to create the classic arcade game Pong. You’ll learn about animation, using object-orientation in JavaScript, and gaming concepts like collision detection.

### Starting URL:

http://goo.gl/kjX3Z

### Resources for going further after this tutorial

Pong is an arcade classic, no doubt. But, maybe you want to recreate some of the other classic games? Or, do you want to learn more about animation, 3D, etc? Try some of these:

* HTML5 Game Development course at Udacity taught by a Google Chrome engineer: https://www.udacity.com/course/cs255 
* Lots of resources for building HTML5 games: http://www.html5gamedevelopment.com/html5-engines 
* Great collection of HTML5 games tutorials and tools: http://html5games.com/resources/ 

## Workshop E: Make battling JavaScript robots!

### Software to install on your laptop before you attend

No installation required. We’ll be using the free site http://fightcodegame.com/. This site requires that you have
an account with [http://www.github.com](http://www.github.com) first. GitHub requires that you be at least 
13-years-old, so if you're younger, make sure your parents approve or create the account for you.

You can study the documentation here: http://fightcodegame.com/docs/.

### What you’ll learn

Create virtual robots that battle each other head to head and rack up points while learning more about 
programming JavaScript with functions, object-orientation and inheritance, events, and more.
  
### Resources for going further after this tutorial

Fighting robots are popular in other languages too, but so are real, physical robots. Here are some resources:

* Robocode: develop robot battle tanks to fight each other: http://robocode.sourceforge.net/ (This is what FightCodeGame.com is based on)
* Lego Mindstorms: write code to make *real* robots move and do all kinds of things: http://mindstorms.lego.com/en-us/default.aspx
* Arduino is an open-source electronics platform intended for artists, designers, hobbyists, and anyone interested in creating interactive objects and environments: http://www.arduino.cc/ 

# Advanced level open space and pair programming lab

For students who have been writing code for a while and may already have projects they are working on and goals for 
problems they are trying to solve or what they want to learn next.

## How it will work

In the world of technology an "open space" is a place where people show up, start talking, and then decide what 
to do. There is no "master plan" that's fixed ahead of time. Instead, you help set the agenda!

You'll get to seek advice from your peers and mentors on coding challenges that you'd like to tackle in this 
and future sessions. We need you to help us and each other to set the agenda for what you want to pursue and 
become experts in!

And, "pair programming" simply means that two developers team up to work on some code together. They take 
turns writing code and thinking strategically about what to do next.

## What you'll teach us

Just to reiterate that we need you to show us what you've been coding already and talk about your next goals.
That way, we can learn about the technologies you're already using, if we need to, and then help you out! 
Perhaps we can help you solve an issue or just start coding something new and advanced just for fun. It all depends 
on your interests and your goals.

## Resources for going further

The number of web sites and training materials are almost endless for advanced programming. See what you can find
on these:

* GitHub is a home for your code, and a place to help other people code: [http://www.github.com](http://www.github.com)
* Google Developers site has tons of info and downloads for writing code with Google's many tools and APIs:
[https://developers.google.com/](https://developers.google.com/)
* Channel9 is Microsoft's social site for developers with lots of resources, videos, competitions: 
[http://channel9.msdn.com/](http://channel9.msdn.com/)
* Khan Academy Computer Science site with lots of videos and instructional materials, tutorials: [https://www.khanacademy.org/cs]
(https://www.khanacademy.org/cs)

What resources do you know of? Share them with us and the rest of the dojo!
